# labwc

./: .clang-format  .gitignore  .kateproject.build  Cargo.toml  PKGBUILD  labwc.config  labwc.files  labwc.includes  meson.build
.github/workflows/: build.yml
clients/: labnag.c  meson.build
docs/: labwc-config.5.scd
include/: action-prompt-command.h  action.h  buffer.h  cycle.h  decorations.h  desktop-entry.h  dnd.h  edges.h  foreign-toplevel-internal.h  foreign-toplevel.h  labwc.h  layers.h  meson.build  node.h  osd.h  output-virtual.h  output.h  overlay.h  placement.h  regions.h  resistance.h  resize-indicator.h  resize-outlines.h  rs-bindings.h  rs-types.h  session-lock.h  snap-constraints.h  snap.h  ssd-internal.h  ssd.h  theme.h  translate.h  util.h  view-c.h  view.h  window-rules.h  workspaces.h  xwayland-view.h  xwayland.h
include/common/: alg.h  buf.h  dir.h  direction.h  edge.h  enum.h  font.h  grab-file.h  graphic-helpers.h  lab-scene-rect.h  listener.h  mem.h  node-type.h  nodename.h  parse-bool.h  reflist.h  refptr.h  scaled-font-buffer.h  scaled-icon-buffer.h  scaled-img-buffer.h  scaled-scene-buffer.h  scene-types.h  str.h  string-helpers.h
include/config/: default-bindings.h  keybind.h  libinput.h  mousebind.h  rcxml.h  tablet.h  touch.h  types.h
include/foreign-toplevel/: ext-foreign.h  foreign.h  wlr-foreign.h
include/img/: img-png.h  img-svg.h  img-xbm.h  img-xpm.h  img.h
include/input/: cursor.h  gestures.h  ime.h  input.h  key-state.h  keyboard.h  tablet-pad.h  tablet.h  touch.h
include/menu/: menu.h
include/protocols/: cosmic-workspaces.h  ext-workspace.h
include/scaled-buffer/: scaled-buffer.h  scaled-font-buffer.h  scaled-icon-buffer.h  scaled-img-buffer.h
include/xwayland/: selection.h  server.h  shell.h  xwayland.h  xwm.h
po/: meson.build
protocols/: meson.build
src/: action-prompt-command.c  action-prompt-command.cpp  action.c  action.cpp  buffer.c  buffer.cpp  cursor.c  debug.c  debug.cpp  desktop-entry.c  desktop-entry.cpp  desktop.c  desktop.cpp  dnd.c  dnd.cpp  edges.c  edges.cpp  foreign-toplevel.c  foreign_toplevel.rs  idle.cpp  interactive.c  interactive.cpp  keyboard.c  layers.c  layers.cpp  lib.rs  magnifier.c  magnifier.cpp  main.c  main.cpp  meson.build  node.c  node.cpp  osd-field.c  osd-field.cpp  osd.c  osd.cpp  output-virtual.c  output-virtual.cpp  output.c  (+52 more)
src/common/: buf.cpp  dir.cpp  direction.c  edge.c  font.cpp  grab-file.cpp  graphic-helpers.cpp  lab-scene-rect.cpp  mem.cpp  meson.build  node-type.c  parse-double.cpp  scaled-font-buffer.cpp  scaled-icon-buffer.c  scaled-icon-buffer.cpp  scaled-img-buffer.cpp  scaled-scene-buffer.c  scaled-scene-buffer.cpp  scene-helpers.c  scene-helpers.cpp  spawn.c  string-helpers.cpp
src/config/: keybind.c  keybind.cpp  libinput.cpp  meson.build  mousebind.c  mousebind.cpp  rcxml.c  rcxml.cpp  session.c  session.cpp  touch.c  touch.cpp
src/cycle/: cycle.c  cycle.cpp  meson.build  osd-classic.c  osd-classic.cpp  osd-field.c  osd-field.cpp  osd-scroll.c  osd-thumbnail.c  osd-thumbnail.cpp
src/decorations/: kde-deco.c  kde-deco.cpp  meson.build  xdg-deco.c  xdg-deco.cpp
src/foreign-toplevel/: ext-foreign.c  ext-foreign.cpp  foreign.c  foreign.cpp  meson.build  wlr-foreign.c  wlr-foreign.cpp
src/img/: img-png.c  img-png.cpp  img-svg.c  img-svg.cpp  img-xbm.c  img-xbm.cpp  img-xpm.cpp  img.c  img.cpp  meson.build
src/input/: cursor.c  cursor.cpp  gestures.c  gestures.cpp  ime.c  ime.cpp  input.c  input.cpp  key-state.c  key-state.cpp  keyboard.c  keyboard.cpp  meson.build  tablet-pad.c  tablet-pad.cpp  tablet.c  tablet.cpp  touch.c  touch.cpp
src/menu/: menu.c  menu.cpp  meson.build
src/osd/: meson.build  osd-classic.c  osd-classic.cpp  osd-field.c  osd-field.cpp  osd-thumbnail.c  osd-thumbnail.cpp  osd.c  osd.cpp
src/protocols/: meson.build
src/protocols/cosmic_workspaces/: meson.build
src/protocols/ext-workspace/: ext-workspace.c  meson.build
src/scaled-buffer/: meson.build  scaled-buffer.cpp  scaled-font-buffer.cpp  scaled-icon-buffer.c  scaled-icon-buffer.cpp  scaled-img-buffer.cpp
src/ssd/: meson.build  resize-indicator.c  resize-indicator.cpp  ssd-border.c  ssd-border.cpp  ssd-button.c  ssd-button.cpp  ssd-extents.c  ssd-extents.cpp  ssd-part.c  ssd-part.cpp  ssd-shadow.c  ssd-shadow.cpp  ssd-titlebar.c  ssd-titlebar.cpp  ssd.c  ssd.cpp
src/xwayland/: meson.build  server.c  shell.c  sockets.c  sockets.h  xwayland.c  xwm.c
src/xwayland/selection/: dnd.c  incoming.c  outgoing.c  selection.c
subprojects/: wlroots.wrap
