labwc_sources = files(
  'action.c',
  'buffer.c',
  'desktop.c',
  'desktop-entry.c',
  'dnd.c',
  'idle.c',
  'interactive.c',
  'layers.c',
  'main.c',
  'node.c',
  'output.c',
  'output-state.c',
  'resistance.c',
  'seat.c',
  'server.c',
  'session-lock.c',
  'theme.c',
  'view.c',
  'view-impl-common.c',
  'xdg.c',
  'xdg-popup.c',
  'xwayland.c',
  'xwayland-unmanaged.c',
)

subdir('common')
subdir('config')
subdir('cycle')
subdir('decorations')
subdir('foreign-toplevel')
subdir('img')
subdir('input')
subdir('menu')
subdir('scaled-buffer')
subdir('ssd')
