labwc_sources += files(
  'box.cpp',
  'buf.cpp',
  'dir.cpp',
  'edge.cpp',
  'fd-util.cpp',
  'file-helpers.cpp',
  'font.cpp',
  'graphic-helpers.cpp',
  'lab-scene-rect.cpp',
  'match.cpp',
  'mem.cpp',
  'nodename.cpp',
  'parse-bool.cpp',
  'parse-double.cpp',
  'scaled-font-buffer.cpp',
  'scaled-icon-buffer.cpp',
  'scaled-img-buffer.cpp',
  'scaled-scene-buffer.cpp',
  'scene-helpers.cpp',
  'set.cpp',
  'surface-helpers.cpp',
  'spawn.cpp',
  'string-helpers.cpp',
)
