labwc_sources += files(
  'box.cpp',
  'buf.cpp',
  'dir.cpp',
  'edge.cpp',
  'fd-util.cpp',
  'file-helpers.cpp',
  'font.cpp',
  'graphic-helpers.cpp',
  'lab-scene-rect.cpp',
  'match.cpp',
  'mem.cpp',
  'nodename.cpp',
  'node-type.cpp',
  'parse-bool.cpp',
  'parse-double.cpp',
  'scene-helpers.cpp',
  'set.cpp',
  'spawn.cpp',
  'string-helpers.cpp',
  'xml.cpp',
)
